--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -12,6 +12,7 @@ go_library(
         "iscc_blob_access_creator.go",
         "new_blob_access.go",
         "new_blob_replicator.go",
+        "proto_blob_access_creator.go",
         "proto_blob_replicator_creator.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/blobstore/configuration",
