--- a/pkg/blobstore/local/BUILD.bazel
+++ b/pkg/blobstore/local/BUILD.bazel
@@ -10,12 +10,13 @@ go_library(
         "block_list_growth_policy.go",
         "block_reference.go",
         "directory_backed_persistent_state_store.go",
+        "flat_blob_access.go",
         "hashing_key_location_map.go",
+        "hierarchical_cas_blob_access.go",
         "in_memory_block_allocator.go",
         "in_memory_location_record_array.go",
         "key.go",
         "key_blob_map.go",
-        "key_blob_map_backed_blob_access.go",
         "key_location_map.go",
         "location.go",
         "location_based_key_blob_map.go",
@@ -56,10 +57,11 @@ go_test(
         "block_device_backed_block_allocator_test.go",
         "block_device_backed_location_record_array_test.go",
         "directory_backed_persistent_state_store_test.go",
+        "flat_blob_access_test.go",
         "hashing_key_location_map_test.go",
+        "hierarchical_cas_blob_access_test.go",
         "in_memory_block_allocator_test.go",
         "in_memory_location_record_array_test.go",
-        "key_blob_map_backed_blob_access_test.go",
         "location_based_key_blob_map_test.go",
         "location_record_key_test.go",
         "old_current_new_location_blob_map_test.go",
