--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -13,6 +13,7 @@ go_library(
         "client_factory.go",
         "deduplicating_client_factory.go",
         "deny_authenticator.go",
+        "forwarding_stream_handler.go",
         "jmespath_extractor.go",
         "lazy_client_dialer.go",
         "metadata_adding_interceptor.go",
@@ -29,10 +30,9 @@ go_library(
         "reflection_relay.go",
         "request_headers_authenticator.go",
         "request_metadata_tracing_interceptor.go",
-        "routing_stream_forwarder.go",
+        "routing_stream_handler.go",
         "server.go",
         "server_transport_stream_context.go",
-        "simple_stream_forwarder.go",
         "tls_client_certificate_authenticator.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/grpc",
@@ -108,6 +108,7 @@ go_test(
         "authenticating_interceptor_test.go",
         "deduplicating_client_factory_test.go",
         "deny_authenticator_test.go",
+        "forwarding_stream_handler_test.go",
         "jmespath_extractor_test.go",
         "lazy_client_dialer_test.go",
         "metadata_adding_interceptor_test.go",
@@ -117,8 +118,7 @@ go_test(
         "proto_trace_attributes_extractor_test.go",
         "request_headers_authenticator_test.go",
         "request_metadata_tracing_interceptor_test.go",
-        "routing_stream_forwarder_test.go",
-        "simple_stream_forwarder_test.go",
+        "routing_stream_handler_test.go",
     ] + select({
         "@rules_go//go/platform:android": [
             "peer_transport_credentials_test.go",
