--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -11,8 +11,9 @@ bazel_dep(name = "opentelemetry-proto", version = "1.8.0")
 bazel_dep(name = "toolchains_protoc", version = "0.6.0")  # must come BEFORE protobuf so the toolchain registration wins
 bazel_dep(name = "platforms", version = "1.0.0")
 bazel_dep(name = "protobuf", version = "33.0")
+bazel_dep(name = "protoc-gen-validate", version = "1.3.0")
 bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
-bazel_dep(name = "rules_go", version = "0.58.3")
+bazel_dep(name = "rules_go", version = "0.59.0")
 bazel_dep(name = "rules_img", version = "0.2.9")
 bazel_dep(name = "rules_jsonnet", version = "0.7.2")
 bazel_dep(name = "rules_nodejs", version = "6.6.0")
@@ -22,7 +23,7 @@ bazel_dep(name = "toolchains_llvm", version = "1.5.0")
 
 git_override(
     module_name = "bazel_remote_apis",
-    commit = "3860ca2d3e559d487b7d4ad07aa2a4a08d7624da",
+    commit = "b02e15a6d354e2fb553216132ccec79f3f5b39cb",
     remote = "https://github.com/bazelbuild/remote-apis.git",
 )
 
