--- a/.bazelrc
+++ b/.bazelrc
@@ -1,6 +1,6 @@
 run --workspace_status_command="bash tools/workspace-status.sh"
 common --enable_platform_specific_config
-common --incompatible_enable_proto_toolchain_resolution
+common --@protobuf//bazel/toolchains:prefer_prebuilt_protoc
 common --protocopt=--fatal_warnings
 
 # Required to make protobuf compile on Windows
