--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,25 +1,24 @@
 module(name = "com_github_buildbarn_bb_storage")
 
-bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
-bazel_dep(name = "aspect_rules_js", version = "2.8.0")
+bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
+bazel_dep(name = "aspect_rules_js", version = "2.9.2")
 bazel_dep(name = "bazel_remote_apis", version = "0")
-bazel_dep(name = "gazelle", version = "0.46.0")
-bazel_dep(name = "googleapis", version = "0.0.0-20251104-53af3b72")
-bazel_dep(name = "grpc", version = "1.76.0")
+bazel_dep(name = "gazelle", version = "0.47.0")
+bazel_dep(name = "googleapis", version = "0.0.0-20260109-6145b5ff")
+bazel_dep(name = "grpc", version = "1.76.0.bcr.1")
 bazel_dep(name = "jsonnet_go", version = "0.21.0")
 bazel_dep(name = "opentelemetry-proto", version = "1.8.0")
-bazel_dep(name = "toolchains_protoc", version = "0.6.0")  # must come BEFORE protobuf so the toolchain registration wins
 bazel_dep(name = "platforms", version = "1.0.0")
-bazel_dep(name = "protobuf", version = "33.0")
+bazel_dep(name = "protobuf", version = "33.4")
 bazel_dep(name = "protoc-gen-validate", version = "1.3.0")
 bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
 bazel_dep(name = "rules_go", version = "0.59.0")
-bazel_dep(name = "rules_img", version = "0.2.9")
+bazel_dep(name = "rules_img", version = "0.3.3")
 bazel_dep(name = "rules_jsonnet", version = "0.7.2")
-bazel_dep(name = "rules_nodejs", version = "6.6.0")
+bazel_dep(name = "rules_nodejs", version = "6.7.3")
 bazel_dep(name = "rules_proto", version = "7.1.0")
 bazel_dep(name = "rules_shell", version = "0.6.1")
-bazel_dep(name = "toolchains_llvm", version = "1.5.0")
+bazel_dep(name = "toolchains_llvm", version = "1.6.0")
 
 git_override(
     module_name = "bazel_remote_apis",
@@ -32,12 +31,13 @@ single_version_override(
     patches = ["//:patches/gazelle/dont-flatten-srcs.diff"],
 )
 
-# Match protobuf above, until it ships a pre-built binary toolchain itself
-protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
-protoc.toolchain(version = "v33.0")
+single_version_override(
+    module_name = "jsonnet_go",
+    patches = ["//:patches/jsonnet_go/bazel-9.diff"],
+)
 
 go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
-go_sdk.download(version = "1.25.4")
+go_sdk.download(version = "1.25.6")
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
