--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -13,7 +13,7 @@ bazel_dep(name = "protobuf", version = "33.4")
 bazel_dep(name = "protoc-gen-validate", version = "1.3.0")
 bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
 bazel_dep(name = "rules_go", version = "0.59.0")
-bazel_dep(name = "rules_img", version = "0.3.3")
+bazel_dep(name = "rules_img", version = "0.3.4")
 bazel_dep(name = "rules_jsonnet", version = "0.7.2")
 bazel_dep(name = "rules_nodejs", version = "6.7.3")
 bazel_dep(name = "rules_proto", version = "7.1.0")
@@ -162,4 +162,12 @@ pull(
     digest = "sha256:3f2b64ef97bd285e36132c684e6b2ae8f2723293d09aae046196cca64251acac",
     registry = "gcr.io",
     repository = "distroless/static",
+)
+
+pull(
+    name = "nanoserver",
+    digest = "sha256:4bfc3ec32a8b9bb5e7a182440c517b0706267d88fda77b54acddf819920400ad",
+    layer_handling = "eager",
+    registry = "mcr.microsoft.com",
+    repository = "windows/nanoserver",
 )
