--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -145,6 +145,7 @@ go_test(
         "//pkg/proto/auth",
         "//pkg/proto/configuration/grpc",
         "//pkg/proto/configuration/jmespath",
+        "//pkg/proto/fsac",
         "//pkg/testutil",
         "//pkg/util",
         "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
